--- a/instagram.html
+++ b/instagram.html
@@ -6,7 +6,11 @@
 </head>
 
 <h1>MY GRAM</h1>
+ 
+    <input style="background-color:white; height: 30px;" type="search" id="search" name="search" placeholder="Search for videos">
 
+    <button> Search</button>
+  </form> 
 
 
 
